# digging-game

./: .gitmodules  CMakeLists.txt  cmake_build_debug_other.sh  cmake_build_debug_win.bat  cmake_build_release_other.sh  cmake_build_release_win.bat  compile_commands.json
.cache/clangd/index/: main.cpp.1816DECBDCD95F1A.idx  main.cpp.B6993291C15609F1.idx  main.cpp.FCF07D633F46256E.idx
assets/: 1.lvl  2.lvl  2_b.anim  2_pen_follow.anim  3.lvl  assetbundle.ab  loading_sprite.anim  objective.anim  transport_1_brightness.anim  transport_bus_1.anim
assets/anim/: test_humanoid.anim
include/: animate.h  animate.hpp  application.h  application.hpp  assetbundleloader.h  assetbundleloader.hpp  base.h  base.hpp  camera.h  character.hpp  config.h  error.h  hole.h  hole.hpp  holes_2_manager.h  holes_3_manager.h  holes_camp.h  holescan.h  humanoid.h  interactable.h  interactable.hpp  items.h  items.hpp  level.h  macro.hpp  map_part.h  object.h  objective.h  player.h  player.hpp  prompt.h  renderer_temp.h  renderer_temp.hpp  resload.h  safe_thread.h  storyobjects.h  vec2.h
lib/SDL2/cmake/: sdl2_image-config.cmake  sdl2_mixer-config.cmake  sdl2_ttf-config.cmake
platform/mac/: error.mm
platform/other/: error.cc
src/: animate_brightness.cc  animate_color.cc  animate_color.cpp  animate_int.cc  animate_rect.cc  animate_rect.cpp  application.cc  application.cpp  assetbundleloader.cc  assetbundleloader.cpp  base.cc  base.cpp  camera.cc  config.c  dialouge.cc  dialouge.cpp  game.cc  game.cpp  gameOver.cc  gameOver.cpp  hole.cc  hole.cpp  holes_camp.cc  holes_jailguard.cc  holes_objective.cc  holes_pen.cc  holes_pen_2.cc  holes_sir.cc  holes_transport_bus_1.cc  holes_water_refill_station.cc  humanoid.cc  interactable.cc  item.cc  item.cpp  level.cc  main.cc  main.cpp  mainMenu.cc  mainMenu.cpp  map_part.cc  (+10 more)
